--- a/SoccerBet.UWP/SoccerBet.UWP.csproj
+++ b/SoccerBet.UWP/SoccerBet.UWP.csproj
@@ -281,181 +281,181 @@
     <Content Include="Assets\Bandiere\Yemen.png" />
     <Content Include="Assets\Bandiere\Zambia.png" />
     <Content Include="Assets\Bandiere\Zimbabwe.png" />
-    <BundleResource Include="Africa.png" />
-    <BundleResource Include="Albania.png" />
-    <BundleResource Include="Algeria.png" />
-    <BundleResource Include="Andorra.png" />
-    <BundleResource Include="Angola.png" />
-    <BundleResource Include="Argentina.png" />
-    <BundleResource Include="Armenia.png" />
-    <BundleResource Include="Aruba.png" />
-    <BundleResource Include="Asia.png" />
-    <BundleResource Include="Australia.png" />
-    <BundleResource Include="Australia_and_Oceania.png" />
-    <BundleResource Include="Austria.png" />
-    <BundleResource Include="Azerbaijan.png" />
-    <BundleResource Include="Bahrain.png" />
-    <BundleResource Include="Bangladesh.png" />
-    <BundleResource Include="Belarus.png" />
-    <BundleResource Include="Belgium.png" />
-    <BundleResource Include="Benin.png" />
-    <BundleResource Include="Bermuda.png" />
-    <BundleResource Include="Bolivia.png" />
-    <BundleResource Include="Bosnia_and_Herzegovina.png" />
-    <BundleResource Include="Botswana.png" />
-    <BundleResource Include="Brazil.png" />
-    <BundleResource Include="Bulgaria.png" />
-    <BundleResource Include="Burkina_Faso.png" />
-    <BundleResource Include="Burundi.png" />
-    <BundleResource Include="Cambodia.png" />
-    <BundleResource Include="Cameroon.png" />
-    <BundleResource Include="Canada.png" />
-    <BundleResource Include="Cape_Verde.png" />
-    <BundleResource Include="Chile.png" />
-    <BundleResource Include="China.png" />
-    <BundleResource Include="Colombia.png" />
-    <BundleResource Include="Costa_Rica.png" />
-    <BundleResource Include="Croatia.png" />
-    <BundleResource Include="Curacao.png" />
-    <BundleResource Include="Cyprus.png" />
-    <BundleResource Include="Czech_Republic.png" />
-    <BundleResource Include="Denmark.png" />
-    <BundleResource Include="Djibouti.png" />
-    <BundleResource Include="Dominican_Republic.png" />
-    <BundleResource Include="DR_Congo.png" />
-    <BundleResource Include="Ecuador.png" />
-    <BundleResource Include="Egypt.png" />
-    <BundleResource Include="El_Salvador.png" />
-    <BundleResource Include="England.png" />
-    <BundleResource Include="Estonia.png" />
-    <BundleResource Include="Eswatini.png" />
-    <BundleResource Include="Ethiopia.png" />
-    <BundleResource Include="Europe.png" />
-    <BundleResource Include="Faroe_Islands.png" />
-    <BundleResource Include="Fiji.png" />
-    <BundleResource Include="Finland.png" />
-    <BundleResource Include="France.png" />
-    <BundleResource Include="Gabon.png" />
-    <BundleResource Include="Gambia.png" />
-    <BundleResource Include="Georgia.png" />
-    <BundleResource Include="Germany.png" />
-    <BundleResource Include="Ghana.png" />
-    <BundleResource Include="Gibraltar.png" />
-    <BundleResource Include="Greece.png" />
-    <BundleResource Include="Guatemala.png" />
-    <BundleResource Include="Guinea.png" />
-    <BundleResource Include="Haiti.png" />
-    <BundleResource Include="Honduras.png" />
-    <BundleResource Include="Hong_Kong.png" />
-    <BundleResource Include="Hungary.png" />
-    <BundleResource Include="Iceland.png" />
-    <BundleResource Include="India.png" />
-    <BundleResource Include="Indonesia.png" />
-    <BundleResource Include="Iran.png" />
-    <BundleResource Include="Iraq.png" />
-    <BundleResource Include="Ireland.png" />
-    <BundleResource Include="Israel.png" />
-    <BundleResource Include="Italy.png" />
-    <BundleResource Include="Ivory_Coast.png" />
-    <BundleResource Include="Jamaica.png" />
-    <BundleResource Include="Japan.png" />
-    <BundleResource Include="Jordan.png" />
-    <BundleResource Include="Kazakhstan.png" />
-    <BundleResource Include="Kenya.png" />
-    <BundleResource Include="Kosovo.png" />
-    <BundleResource Include="Kuwait.png" />
-    <BundleResource Include="Kyrgyzstan.png" />
-    <BundleResource Include="Laos.png" />
-    <BundleResource Include="Latvia.png" />
-    <BundleResource Include="Lebanon.png" />
-    <BundleResource Include="Lesotho.png" />
-    <BundleResource Include="Liberia.png" />
-    <BundleResource Include="Libya.png" />
-    <BundleResource Include="Liechtenstein.png" />
-    <BundleResource Include="Lithuania.png" />
-    <BundleResource Include="Luxembourg.png" />
-    <BundleResource Include="Macao.png" />
-    <BundleResource Include="Malawi.png" />
-    <BundleResource Include="Malaysia.png" />
-    <BundleResource Include="Maldives.png" />
-    <BundleResource Include="Mali.png" />
-    <BundleResource Include="Malta.png" />
-    <BundleResource Include="Mauritania.png" />
-    <BundleResource Include="Mauritius.png" />
-    <BundleResource Include="Mexico.png" />
-    <BundleResource Include="Moldova.png" />
-    <BundleResource Include="Mongolia.png" />
-    <BundleResource Include="Montenegro.png" />
-    <BundleResource Include="Morocco.png" />
-    <BundleResource Include="Mozambique.png" />
-    <BundleResource Include="Myanmar.png" />
-    <BundleResource Include="Namibia.png" />
-    <BundleResource Include="Netherlands.png" />
-    <BundleResource Include="New_Zealand.png" />
-    <BundleResource Include="Nicaragua.png" />
-    <BundleResource Include="Niger.png" />
-    <BundleResource Include="Nigeria.png" />
-    <BundleResource Include="North_and_Central_America.png" />
-    <BundleResource Include="North_Macedonia.png" />
-    <BundleResource Include="Northern_Ireland.png" />
-    <BundleResource Include="Norway.png" />
-    <BundleResource Include="Oman.png" />
-    <BundleResource Include="Pakistan.png" />
-    <BundleResource Include="Palestine.png" />
-    <BundleResource Include="Panama.png" />
-    <BundleResource Include="Paraguay.png" />
-    <BundleResource Include="Peru.png" />
-    <BundleResource Include="Philippines.png" />
-    <BundleResource Include="Poland.png" />
-    <BundleResource Include="Portugal.png" />
-    <BundleResource Include="Qatar.png" />
-    <BundleResource Include="Republic_of_the_Congo.png" />
-    <BundleResource Include="Reunion.png" />
-    <BundleResource Include="Romania.png" />
-    <BundleResource Include="Russia.png" />
-    <BundleResource Include="Rwanda.png" />
-    <BundleResource Include="San_Marino.png" />
-    <BundleResource Include="Saudi_Arabia.png" />
-    <BundleResource Include="Scotland.png" />
-    <BundleResource Include="Senegal.png" />
-    <BundleResource Include="Serbia.png" />
-    <BundleResource Include="Seychelles.png" />
-    <BundleResource Include="Sierra_Leone.png" />
-    <BundleResource Include="Singapore.png" />
-    <BundleResource Include="Slovakia.png" />
-    <BundleResource Include="Slovenia.png" />
-    <BundleResource Include="Somalia.png" />
-    <BundleResource Include="South_Africa.png" />
-    <BundleResource Include="South_America.png" />
-    <BundleResource Include="South_Korea.png" />
-    <BundleResource Include="Spain.png" />
-    <BundleResource Include="Sri_Lanka.png" />
-    <BundleResource Include="Sudan.png" />
-    <BundleResource Include="Sweden.png" />
-    <BundleResource Include="Switzerland.png" />
-    <BundleResource Include="Syria.png" />
-    <BundleResource Include="Taiwan.png" />
-    <BundleResource Include="Tajikistan.png" />
-    <BundleResource Include="Tanzania.png" />
-    <BundleResource Include="Thailand.png" />
-    <BundleResource Include="Togo.png" />
-    <BundleResource Include="Trinidad_and_Tobago.png" />
-    <BundleResource Include="Tunisia.png" />
-    <BundleResource Include="Turkey.png" />
-    <BundleResource Include="Turkmenistan.png" />
-    <BundleResource Include="Uganda.png" />
-    <BundleResource Include="Ukraine.png" />
-    <BundleResource Include="United_Arab_Emirates.png" />
-    <BundleResource Include="Uruguay.png" />
-    <BundleResource Include="USA.png" />
-    <BundleResource Include="Uzbekistan.png" />
-    <BundleResource Include="Venezuela.png" />
-    <BundleResource Include="Vietnam.png" />
-    <BundleResource Include="Wales.png" />
-    <BundleResource Include="World.png" />
-    <BundleResource Include="Yemen.png" />
-    <BundleResource Include="Zambia.png" />
-    <BundleResource Include="Zimbabwe.png" />
+    <Content Include="Africa.png" />
+    <Content Include="Albania.png" />
+    <Content Include="Algeria.png" />
+    <Content Include="Andorra.png" />
+    <Content Include="Angola.png" />
+    <Content Include="Argentina.png" />
+    <Content Include="Armenia.png" />
+    <Content Include="Aruba.png" />
+    <Content Include="Asia.png" />
+    <Content Include="Australia.png" />
+    <Content Include="Australia_and_Oceania.png" />
+    <Content Include="Austria.png" />
+    <Content Include="Azerbaijan.png" />
+    <Content Include="Bahrain.png" />
+    <Content Include="Bangladesh.png" />
+    <Content Include="Belarus.png" />
+    <Content Include="Belgium.png" />
+    <Content Include="Benin.png" />
+    <Content Include="Bermuda.png" />
+    <Content Include="Bolivia.png" />
+    <Content Include="Bosnia_and_Herzegovina.png" />
+    <Content Include="Botswana.png" />
+    <Content Include="Brazil.png" />
+    <Content Include="Bulgaria.png" />
+    <Content Include="Burkina_Faso.png" />
+    <Content Include="Burundi.png" />
+    <Content Include="Cambodia.png" />
+    <Content Include="Cameroon.png" />
+    <Content Include="Canada.png" />
+    <Content Include="Cape_Verde.png" />
+    <Content Include="Chile.png" />
+    <Content Include="China.png" />
+    <Content Include="Colombia.png" />
+    <Content Include="Costa_Rica.png" />
+    <Content Include="Croatia.png" />
+    <Content Include="Curacao.png" />
+    <Content Include="Cyprus.png" />
+    <Content Include="Czech_Republic.png" />
+    <Content Include="Denmark.png" />
+    <Content Include="Djibouti.png" />
+    <Content Include="Dominican_Republic.png" />
+    <Content Include="DR_Congo.png" />
+    <Content Include="Ecuador.png" />
+    <Content Include="Egypt.png" />
+    <Content Include="El_Salvador.png" />
+    <Content Include="England.png" />
+    <Content Include="Estonia.png" />
+    <Content Include="Eswatini.png" />
+    <Content Include="Ethiopia.png" />
+    <Content Include="Europe.png" />
+    <Content Include="Faroe_Islands.png" />
+    <Content Include="Fiji.png" />
+    <Content Include="Finland.png" />
+    <Content Include="France.png" />
+    <Content Include="Gabon.png" />
+    <Content Include="Gambia.png" />
+    <Content Include="Georgia.png" />
+    <Content Include="Germany.png" />
+    <Content Include="Ghana.png" />
+    <Content Include="Gibraltar.png" />
+    <Content Include="Greece.png" />
+    <Content Include="Guatemala.png" />
+    <Content Include="Guinea.png" />
+    <Content Include="Haiti.png" />
+    <Content Include="Honduras.png" />
+    <Content Include="Hong_Kong.png" />
+    <Content Include="Hungary.png" />
+    <Content Include="Iceland.png" />
+    <Content Include="India.png" />
+    <Content Include="Indonesia.png" />
+    <Content Include="Iran.png" />
+    <Content Include="Iraq.png" />
+    <Content Include="Ireland.png" />
+    <Content Include="Israel.png" />
+    <Content Include="Italy.png" />
+    <Content Include="Ivory_Coast.png" />
+    <Content Include="Jamaica.png" />
+    <Content Include="Japan.png" />
+    <Content Include="Jordan.png" />
+    <Content Include="Kazakhstan.png" />
+    <Content Include="Kenya.png" />
+    <Content Include="Kosovo.png" />
+    <Content Include="Kuwait.png" />
+    <Content Include="Kyrgyzstan.png" />
+    <Content Include="Laos.png" />
+    <Content Include="Latvia.png" />
+    <Content Include="Lebanon.png" />
+    <Content Include="Lesotho.png" />
+    <Content Include="Liberia.png" />
+    <Content Include="Libya.png" />
+    <Content Include="Liechtenstein.png" />
+    <Content Include="Lithuania.png" />
+    <Content Include="Luxembourg.png" />
+    <Content Include="Macao.png" />
+    <Content Include="Malawi.png" />
+    <Content Include="Malaysia.png" />
+    <Content Include="Maldives.png" />
+    <Content Include="Mali.png" />
+    <Content Include="Malta.png" />
+    <Content Include="Mauritania.png" />
+    <Content Include="Mauritius.png" />
+    <Content Include="Mexico.png" />
+    <Content Include="Moldova.png" />
+    <Content Include="Mongolia.png" />
+    <Content Include="Montenegro.png" />
+    <Content Include="Morocco.png" />
+    <Content Include="Mozambique.png" />
+    <Content Include="Myanmar.png" />
+    <Content Include="Namibia.png" />
+    <Content Include="Netherlands.png" />
+    <Content Include="New_Zealand.png" />
+    <Content Include="Nicaragua.png" />
+    <Content Include="Niger.png" />
+    <Content Include="Nigeria.png" />
+    <Content Include="North_and_Central_America.png" />
+    <Content Include="North_Macedonia.png" />
+    <Content Include="Northern_Ireland.png" />
+    <Content Include="Norway.png" />
+    <Content Include="Oman.png" />
+    <Content Include="Pakistan.png" />
+    <Content Include="Palestine.png" />
+    <Content Include="Panama.png" />
+    <Content Include="Paraguay.png" />
+    <Content Include="Peru.png" />
+    <Content Include="Philippines.png" />
+    <Content Include="Poland.png" />
+    <Content Include="Portugal.png" />
+    <Content Include="Qatar.png" />
+    <Content Include="Republic_of_the_Congo.png" />
+    <Content Include="Reunion.png" />
+    <Content Include="Romania.png" />
+    <Content Include="Russia.png" />
+    <Content Include="Rwanda.png" />
+    <Content Include="San_Marino.png" />
+    <Content Include="Saudi_Arabia.png" />
+    <Content Include="Scotland.png" />
+    <Content Include="Senegal.png" />
+    <Content Include="Serbia.png" />
+    <Content Include="Seychelles.png" />
+    <Content Include="Sierra_Leone.png" />
+    <Content Include="Singapore.png" />
+    <Content Include="Slovakia.png" />
+    <Content Include="Slovenia.png" />
+    <Content Include="Somalia.png" />
+    <Content Include="South_Africa.png" />
+    <Content Include="South_America.png" />
+    <Content Include="South_Korea.png" />
+    <Content Include="Spain.png" />
+    <Content Include="Sri_Lanka.png" />
+    <Content Include="Sudan.png" />
+    <Content Include="Sweden.png" />
+    <Content Include="Switzerland.png" />
+    <Content Include="Syria.png" />
+    <Content Include="Taiwan.png" />
+    <Content Include="Tajikistan.png" />
+    <Content Include="Tanzania.png" />
+    <Content Include="Thailand.png" />
+    <Content Include="Togo.png" />
+    <Content Include="Trinidad_and_Tobago.png" />
+    <Content Include="Tunisia.png" />
+    <Content Include="Turkey.png" />
+    <Content Include="Turkmenistan.png" />
+    <Content Include="Uganda.png" />
+    <Content Include="Ukraine.png" />
+    <Content Include="United_Arab_Emirates.png" />
+    <Content Include="Uruguay.png" />
+    <Content Include="USA.png" />
+    <Content Include="Uzbekistan.png" />
+    <Content Include="Venezuela.png" />
+    <Content Include="Vietnam.png" />
+    <Content Include="Wales.png" />
+    <Content Include="World.png" />
+    <Content Include="Yemen.png" />
+    <Content Include="Zambia.png" />
+    <Content Include="Zimbabwe.png" />
     <Content Include="burgericon.png" />
     <Content Include="ladder.png" />
     <Content Include="lader.png" />
