--- a/SoccerBet/SoccerBet.csproj
+++ b/SoccerBet/SoccerBet.csproj
@@ -215,6 +215,9 @@
     <EmbeddedResource Update="Views\ClassificheCampionati.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ClassificheCampionati2.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ClassificheGiocatori.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
